@@ -360,6 +360,20 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|FileUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|Path
 import|;
 end_import
@@ -2346,10 +2360,12 @@ decl_stmt|;
 if|if
 condition|(
 operator|!
-name|f
+name|FileUtil
 operator|.
 name|canRead
-argument_list|()
+argument_list|(
+name|f
+argument_list|)
 condition|)
 block|{
 name|fail
